--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -49,7 +49,8 @@ jobs:
           coverages="{}"
           for i in $(find . -name coverage-summary.json); do
             total=`jq -cr '.total' $i`
-            coverages=$(echo $coverages | jq -rc --arg package $(basename $(dirname $(dirname $i))) --argjson t $total '.[$package]= $t')
+            name=$(basename $(dirname $(dirname $i)))
+            coverages=$(jq -rc --arg package $name --argjson t $total '.[$package]= $t' <<< "$coverages")
           done  
           echo $coverages
           echo "::set-output name=coverages::$coverages"
@@ -91,7 +92,8 @@ jobs:
           coverages="{}"
           for i in $(find . -name coverage-summary.json); do
             total=`jq -cr '.total' $i`
-            coverages=$(echo $coverages | jq -rc --arg package $(basename $(dirname $(dirname $i))) --argjson t $total '.[$package]= $t')
+            name=$(basename $(dirname $(dirname $i)))
+            coverages=$(jq -rc --arg package $name --argjson t $total '.[$package]= $t' <<< "$coverages")
           done  
           echo $coverages
           echo "::set-output name=coverages::$coverages"
