--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -46,15 +46,14 @@ jobs:
           xvfb-run -a npx lerna run test:unit --stream
           __TEAMSFX_INSIDER_PREVIEW=false xvfb-run -a npx lerna run test:unit --stream
 
-          coverages="{}"
+          echo "{}" > coverages.json
           for i in $(find . -name coverage-summary.json); do
             total=`jq -cr '.total' $i`
-            echo $total
             name=$(basename $(dirname $(dirname $i)))
-            echo $name
-            jq -rc --arg package $name --argjson t $total '.[$package]= $t' <<< "$coverages"
-            coverages=$(jq -rc --arg package $name --argjson t $total '.[$package]= $t' <<< "$coverages")
+            jq --arg package $name --argjson t $total '.[$package]=$t' coverages.json > coverages.json.tmp
+            mv coverages.json.tmp coverages.json
           done  
+          coverages=`cat coverages.json`
           echo $coverages
           echo "::set-output name=coverages::$coverages"
 
@@ -92,15 +91,14 @@ jobs:
           xvfb-run -a npx lerna run test:unit --stream
           __TEAMSFX_INSIDER_PREVIEW=false xvfb-run -a npx lerna run test:unit --stream
 
-          coverages="{}"
+          echo "{}" > coverages.json
           for i in $(find . -name coverage-summary.json); do
             total=`jq -cr '.total' $i`
-            echo $total
             name=$(basename $(dirname $(dirname $i)))
-            echo $name
-            jq -rc --arg package $name --argjson t $total '.[$package]= $t' <<< "$coverages"
-            coverages=$(jq -rc --arg package $name --argjson t $total '.[$package]= $t' <<< "$coverages")
+            jq --arg package $name --argjson t $total '.[$package]=$t' coverages.json > coverages.json.tmp
+            mv coverages.json.tmp coverages.json
           done  
+          coverages=`cat coverages.json`
           echo $coverages
           echo "::set-output name=coverages::$coverages"
 
