fix: block debug before extension activated

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -61,6 +61,7 @@
     "onCommand:fx-extension.validate-dependencies",
     "onCommand:fx-extension.pre-debug-check",
     "onCommand:fx-extension.migrateV1Project",
+    "onCommand:workbench.action.tasks.runTask",
     "workspaceContains:**/.fx/*",
     "onView:teamsfx",
     "onView:teamsfx-accounts",
