chore: cicd service principal integration (#3199)
* chore: add service principal support

--- a/docs/cicd_insider/github-cd-template.yml
+++ b/docs/cicd_insider/github-cd-template.yml
@@ -12,15 +12,6 @@ jobs:
     # You can uncomment the line below to use environments (refer to https://docs.github.com/en/actions/reference/environments). 
     #environment: test_environment
     env:
-      AZURE_ACCOUNT_NAME: ${{secrets.AZURE_ACCOUNT_NAME}}
-      AZURE_ACCOUNT_PASSWORD: ${{secrets.AZURE_ACCOUNT_PASSWORD}}
-      AZURE_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
-      AZURE_TENANT_ID: ${{secrets.AZURE_TENANT_ID}}
-      M365_ACCOUNT_NAME: ${{secrets.M365_ACCOUNT_NAME}}
-      M365_ACCOUNT_PASSWORD: ${{secrets.M365_ACCOUNT_PASSWORD}}
-
-      # insider preview features are enabled by default
-
       # To specify the env name for multi-env feature.
       TEAMSFX_ENV_NAME: staging
 
@@ -47,16 +38,23 @@ jobs:
       - name: Run Unit Test
         run: cd tabs && npm run test && cd -
 
+      - name: Login Azure by service principal 
+        uses: OfficeDev/teamsfx-cli-action@v1
+        with:
+          commands: account login azure 
+          service-principal: true
+          username: ${{secrets.AZURE_SERVICE_PRINCIPAL_NAME}}
+          password: ${{secrets.AZURE_SERVICE_PRINCIPAL_PASSWORD}}
+          tenant: ${{secrets.AZURE_TENANT_ID}}
+
       # We suggest to do the `teamsfx provision` step manually or in a separate workflow. The following steps are for your reference.
       # After provisioning, you should commit necessary files under .fx into the repository.
       # You should copy content of .fx/states/${TEAMSFX_ENV_NAME}.userdata, and save it in the repository secrets (https://docs.github.com/en/actions/reference/encrypted-secrets) which can be refered by the step with name 'Generate userdata'. 
       #- name: Provision hosting environment
       #  uses: OfficeDev/teamsfx-cli-action@v1
-      #  env:
-      #    TEAMSFX_BICEP_ENV_CHECKER_ENABLE: true
       #  with:
       #    commands: provision
-      #    subscription: ${{env.AZURE_SUBSCRIPTION_ID}}
+      #    subscription: ${{secrets.AZURE_SUBSCRIPTION_ID}}
       #    env: ${{env.TEAMSFX_ENV_NAME}}
 
       #- name: Commit provision configs if necessary
@@ -96,9 +94,3 @@ jobs:
         with:
           name: appPackage
           path: build/appPackage/appPackage.${{env.TEAMSFX_ENV_NAME}}.zip
-
-      - name: Publish Teams App
-        uses: OfficeDev/teamsfx-cli-action@v1
-        with:
-          commands: publish
-          env: ${{env.TEAMSFX_ENV_NAME}}
