fix: block debug before extension activated (#3393)
* fix: block debug before extension activated

* fix: remove useless activation events

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -58,9 +58,8 @@
     "onCommand:fx-extension.openAppManagement",
     "onCommand:fx-extension.openBotManagement",
     "onCommand:fx-extension.openReportIssues",
-    "onCommand:fx-extension.validate-dependencies",
-    "onCommand:fx-extension.pre-debug-check",
     "onCommand:fx-extension.migrateV1Project",
+    "onCommand:workbench.action.tasks.runTask",
     "workspaceContains:**/.fx/*",
     "onView:teamsfx",
     "onView:teamsfx-accounts",
