--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -23,6 +23,7 @@
     "test:unit": "nyc --no-clean mocha \"tests/**/*.test.ts\"",
     "test:solution": "nyc mocha \"tests/plugins/solution/*.test.ts\"",
     "test:core": "nyc mocha \"tests/core/**/*.test.ts\"",
+    "test:corev3": "nyc mocha \"tests/core/corev3.test.ts\"",
     "test:core-mw": "nyc mocha \"tests/core/middleware/*.test.ts\"",
     "test:core-tools": "nyc mocha \"tests/core/tools.test.ts\"",
     "test:apiv2": "nyc mocha \"tests/plugins/resource/apiv2/*.test.ts\"",
