refactor(localdebug): prepare localenvmanager

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -89,6 +89,9 @@
 /packages/fx-core/src/plugins/solution/arm.ts @blackchoey @xzf0587 @dilin-MS @wenytang-ms @adashen
 /packages/fx-core/src/common/armInterface.ts @blackchoey @xzf0587 @dilin-MS @wenytang-ms @adashen
 
+/packages/fx-core/src/common/local @kimizhu @swatDong @kuojianlu @XiaofuHuang
+/packages/fx-core/tests/common/local @kimizhu @swatDong @kuojianlu @XiaofuHuang
+
 /packages/simpleauth @adashen @blackchoey @wenytang-ms
 
 /packages/function-extension @adashen @blackchoey @dilin-MS
