--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -22,6 +22,7 @@
     "test:keyvault": "nyc mocha \"tests/plugins/resource/keyvault/**/*.test.ts\"",
     "test:unit": "nyc --no-clean mocha \"tests/**/*.test.ts\"",
     "test:solution": "nyc mocha \"tests/plugins/solution/*.test.ts\"",
+    "test:solution:debug": "nyc mocha \"tests/plugins/solution/debug/*.test.ts\"",
     "test:core": "nyc mocha \"tests/core/**/*.test.ts\"",
     "test:core-mw": "nyc mocha \"tests/core/middleware/*.test.ts\"",
     "test:core-tools": "nyc mocha \"tests/core/tools.test.ts\"",
