--- a/packages/fx-core/.nycrc
+++ b/packages/fx-core/.nycrc
@@ -8,6 +8,7 @@
   "exclude": [
       "src/plugins/resource/function/utils/depsChecker/**/*",
       "src/plugins/solution/fx-solution/utils/depsChecker/**/*",
+      "src/common/deps-checker/**/*",
       "src/plugins/resource/localdebug/legacyPlugin.ts"
   ],
   "reporter": [
