--- a/.github/workflows/env-checker-ci-schedule.yml
+++ b/.github/workflows/env-checker-ci-schedule.yml
@@ -90,3 +90,15 @@ jobs:
         if: runner.os != 'Linux'
         run: |
           npm run test:env-checker
+
+      - name: Integration Test with xvfb
+        working-directory: ./packages/fx-core
+        if: runner.os == 'Linux'
+        run: |
+          xvfb-run -a npm run test:env-checker
+
+      - name: Integration Test
+        working-directory: ./packages/fx-core
+        if: runner.os != 'Linux'
+        run: |
+          npm run test:env-checker
