--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -19,10 +19,10 @@
     "prepack": "npm run package",
     "test:e2e": "npm run test:e2e:clean && npm run test:e2e:parallel",
     "test:e2e:clean": "ts-node tests/e2e/clean.ts",
-    "test:e2e:parallel": "mocha --parallel --reporter @mochajs/json-file-reporter \"tests/e2e/**/*.tests.ts\"",
-    "test:e2e:smoke": "mocha --reporter @mochajs/json-file-reporter \"tests/e2e/smoke/*.tests.ts\"",
-    "test:e2e:others": "mocha --reporter @mochajs/json-file-reporter \"tests/e2e/{,!(smoke)}/*.tests.ts\"",
-    "test:unit": "nyc --no-clean mocha \"tests/unit/**/*.tests.ts\"",
+    "test:e2e:parallel": "mocha --parallel --reporter @mochajs/json-file-reporter \"tests/e2e/**/*.test.ts\"",
+    "test:e2e:smoke": "mocha --reporter @mochajs/json-file-reporter \"tests/e2e/smoke/*.test.ts\"",
+    "test:e2e:others": "mocha --reporter @mochajs/json-file-reporter \"tests/e2e/{,!(smoke)}/*.test.ts\"",
+    "test:unit": "nyc --no-clean mocha \"tests/unit/**/*.test.ts\"",
     "check-format": "prettier --list-different --config .prettierrc.json --ignore-path .prettierignore \"{src,tests}/**/*.ts\" \"*.{js,json}\"",
     "format": "prettier --write --config .prettierrc.json --ignore-path .prettierignore \"{src,tests}/**/*.ts\" \"*.{js,json}\"",
     "lint:fix": "eslint \"src/**/*.ts\" \"tests/**/*.ts\" --fix",
