--- a/packages/cli/.vscode/launch.json
+++ b/packages/cli/.vscode/launch.json
@@ -10,7 +10,7 @@
       "name": "Launch new command (non-interactive)",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}/cli.js",
-      "args": ["new", "--interactive", "false", "--app-name", "fxE2E1639996799061b9", "--capabilities", "tab", "bot", "--azure-resources", "function", "--programming-language", "typescript"] ,
+      "args": ["new", "--interactive", "false"],
       "outFiles": [
         "${workspaceFolder}/lib/**/*.js",
         "${workspaceFolder}/../fx-core/build/**/*.js",
@@ -20,8 +20,7 @@
         "${workspaceFolder}/lib/**/*.js",
         "${workspaceFolder}/../fx-core/build/**/*.js",
         "${workspaceFolder}/../api/build/**/*.js"
-      ],
-      "console": "integratedTerminal"
+      ]
     },
     {
       "type": "pwa-node",
