--- a/templates/package.json
+++ b/templates/package.json
@@ -12,6 +12,7 @@
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
+    "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
     "lint-staged": "^10.5.4",
