--- a/.github/workflows/cicd_test_trigger.yml
+++ b/.github/workflows/cicd_test_trigger.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Trigger TeamsFx-CICD-Test
         run: |
             curl \
-                -u :${{ secrets.CICD_TOKEN }} \
+                -u :${{ secrets.TEAMSFX_BOT }} \
                 -X POST \
                 -H "Accept: application/vnd.github.v3+json" \
                 https://api.github.com/repos/OfficeDev/TeamsFx-CICD-Test/actions/workflows/trigger_cicd_by_${{ github.event.workflow_run.head_branch }}.yml/dispatches \
