feat: add a global setting 'interactive' for all commands

--- a/packages/cli/.vscode/launch.json
+++ b/packages/cli/.vscode/launch.json
@@ -20,7 +20,8 @@
         "${workspaceFolder}/lib/**/*.js",
         "${workspaceFolder}/../fx-core/build/**/*.js",
         "${workspaceFolder}/../api/build/**/*.js"
-      ]
+      ],
+      "console": "integratedTerminal"
     },
     {
       "type": "pwa-node",
