--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -135,6 +135,7 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.22.0",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-prettier": "^4.0.0",
     "faker": "^5.5.2",
     "lint-staged": "^10.5.4",
