--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -95,6 +95,7 @@
     "dotenv": "^10.0.0",
     "eslint": "^8.1.0",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-prettier": "^4.0.0",
     "fs-extra": "^9.1.0",
     "got": "^11.8.2",
