--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-cli",
-  "version": "0.9.1",
+  "version": "0.9.2-rc-hotfix.0",
   "author": "Microsoft Corporation",
   "description": "",
   "license": "MIT",
@@ -103,7 +103,7 @@
     "@azure/identity": "^1.3.0",
     "@azure/ms-rest-nodeauth": "^3.0.6",
     "@microsoft/teamsfx-api": "^0.12.0",
-    "@microsoft/teamsfx-core": "^1.1.1",
+    "@microsoft/teamsfx-core": "^1.1.2-rc-hotfix.0",
     "adm-zip": "^0.5.5",
     "applicationinsights": "^1.8.10",
     "async-mutex": "^0.3.1",
