--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -79,6 +79,7 @@
     "md5": "^2.3.0",
     "mime": "^2.5.2",
     "mustache": "^4.2.0",
+    "neverthrow": "^3.2.0",
     "node-forge": "^0.10.0",
     "node-ts-uuid": "^1.0.8",
     "openapi-types": "^7.2.3",
