--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -899,7 +899,7 @@
     "format": "prettier --write --config .prettierrc.json --ignore-path .prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"*.{js,json}\"",
     "lint:fix": "eslint --config .eslintrc.js package.json src test --ext .ts --fix --fix-type [problem,suggestion]",
     "lint": "eslint \"src/**/*.ts\" \"test/**/*.ts\"",
-    "prepare": "npm run build",
+    "prepare": "",
     "precommit": "lint-staged"
   },
   "devDependencies": {
