feat: add hint for readonly preview file and allow users to navigate to template file to edit

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -523,7 +523,7 @@
       {
         "command": "fx-extension.updatePreviewFile",
         "title": "Teams: Update manifest to Teams platform",
-        "icon": "$(cloud-upload)",
+        "icon": "$(sync)",
         "enablement": "fx-extension.isMultiEnvEnabled"
       },
       {
