--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -37,11 +37,7 @@
     "lint:fix": "eslint --fix \"src/**/*.ts\" \"tests/**/*.ts\"",
     "prepare": "npm run build && node ./scripts/download-templates-zip.js $(git tag --list)",
     "prepublishOnly": "npm run test:unit && npm run build",
-    "package": "rimraf build && webpack --mode production --config ./webpack.config.js",
-    "precommit": "lint-staged",
-    "install:api": "cd api && npm install",
-    "install:tabs": "cd tabs && npm install",
-    "installAll": "npm run install:api & npm run install:tabs"
+    "package": "rimraf build && webpack --mode production --config ./webpack.config.js"
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.0.2",
