--- a/packages/cli/.nycrc
+++ b/packages/cli/.nycrc
@@ -8,6 +8,7 @@
   "exclude": [
     "src/cmds/preview/depsChecker/**/*",
     "src/cmds/preview/preview.ts",
+    "src/cmds/preview/commonUtils.ts",
     "src/index.ts",
     "cli.js",
     ".eslintrc.js",
