refactor(localdebug): move isShell and isCmd into execOptions

--- a/packages/cli/.nycrc
+++ b/packages/cli/.nycrc
@@ -8,7 +8,7 @@
   "exclude": [
     "src/cmds/preview/depsChecker/**/*",
     "src/cmds/preview/preview.ts",
-    "src/cmds/preview/commonUtils.ts",
+    "src/cmds/preview/error.ts",
     "src/index.ts",
     "cli.js",
     ".eslintrc.js",
