--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -986,7 +986,7 @@
   "dependencies": {
     "@azure/identity": "^1.2.1",
     "@azure/ms-rest-nodeauth": "^3.0.7",
-    "@azure/msal-node": "^1.0.0-beta.5",
+    "@azure/msal-node": "^1.5.0",
     "@microsoft/teamsfx-api": "^0.12.0",
     "@microsoft/teamsfx-core": "^1.1.2",
     "@npmcli/arborist": "^4.0.4",
