--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -81,6 +81,7 @@
     "@types/fs-extra": "^9.0.11",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.7",
+    "@types/semver": "^7.3.9",
     "@types/sinon": "^10.0.6",
     "@types/tedious": "^4.0.5",
     "@types/url-join": "^4.0.1",
