test: rename ut

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -75,6 +75,7 @@
 
 /packages/fx-core/src/plugins/resource/frontend @hund030 @eriolchan @IvanJobs
 /packages/fx-core/tests/plugins/resource/frontend @hund030 @eriolchan @IvanJobs
+/packages/fx-core/tests/plugins/resource/dotnet @hund030 @eriolchan @IvanJobs
 
 /packages/fx-core/src/plugins/resource/function @eriolchan @hund030 @IvanJobs
 /packages/fx-core/tests/plugins/resource/function @eriolchan @hund030 @IvanJobs
