--- a/.github/workflows/env-checker-ci-pr.yml
+++ b/.github/workflows/env-checker-ci-pr.yml
@@ -9,8 +9,8 @@ on:
     paths:
       - '.github/workflows/env-checker-ci-pr.yml'
       - '.github/env-checker'
-      - 'packages/vscode-extension/src/debug/depsChecker/**'
-      - 'packages/vscode-extension/test/suite/envChecker/**'
+      - 'packages/fx-core/src/common/deps-checker/**'
+      - 'packages/fx-core/tests/common/deps-checker/**'
   push:
     branches:
       - dev
@@ -19,8 +19,8 @@ on:
     paths:
       - '.github/workflows/env-checker-ci-pr.yml'
       - '.github/env-checker'
-      - 'packages/vscode-extension/src/debug/depsChecker/**'
-      - 'packages/vscode-extension/test/suite/envChecker/**'
+      - 'packages/fx-core/src/common/deps-checker/**'
+      - 'packages/fx-core/tests/common/deps-checker/**'
   workflow_dispatch: # Manual trigger
 
 jobs:
@@ -94,13 +94,13 @@ jobs:
       ## In headless Linux CI machines xvfb is required to run VS Code
       ## https://code.visualstudio.com/api/working-with-extensions/continuous-integration#github-actions
       - name: Integration Test with xvfb
-        working-directory: ./packages/vscode-extension
+        working-directory: ./packages/fx-core
         if: runner.os == 'Linux'
         run: |
           xvfb-run -a npm run test:env-checker
 
       - name: Integration Test
-        working-directory: ./packages/vscode-extension
+        working-directory: ./packages/fx-core
         if: runner.os != 'Linux'
         run: |
           npm run test:env-checker
