chore: fix e2e report error

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -152,7 +152,7 @@ jobs:
         with:
           name: ${{ matrix.cases }}.json
           path: |
-            ./packages/cli/report.json
+            ./packages/cli/tests/e2e/report.json
 
       - name: Sync to Azure DevOps Test Plan
         if: ${{ always() && (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch') }}
