--- a/packages/sdk/.nycrc
+++ b/packages/sdk/.nycrc
@@ -5,6 +5,9 @@
     "src/**/*.ts",
     "src/**/*.js"
   ],
+  "exclude": [
+    "src/**/*.browser.ts"
+  ],
   "reporter": [
     "text",
     "html",
