chore: fix e2e report error

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -150,6 +150,7 @@ jobs:
         uses: actions/upload-artifact@v2
         if: failure()
         with:
+          name: ${{ github.run_id }}.json
           path: |
             ./packages/cli/tests/e2e/report.json
 
