chore: update cicdGuide

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -305,8 +305,8 @@
           "when": "false"
         },
         {
-          "command": "fx-extension.cicdGuide",
-          "when": "false"
+          "command": "fx-extension.migrateV1Project",
+          "when": "fx-extension.v1Project"
         },
         {
           "command": "fx-extension.refreshEnvironment",
@@ -511,8 +511,8 @@
         "icon": "$(run)"
       },
       {
-        "command": "fx-extension.cicdGuide",
-        "title": "CI/CD guide",
+        "command": "fx-extension.addCICDWorkflows",
+        "title": "Add CI/CD Workflows",
         "icon": "$(sync)"
       },
       {
