--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -884,9 +884,8 @@
   "scripts": {
     "lint:staged": "lint-staged",
     "vscode:prepublish": "rimraf out && npm run package",
-    "copy-files": "copyfiles -u 1 src/**/*.html src/**/*.css src/**/*.ps1 src/**/*.sh out/src/",
+    "copy-files": "copyfiles -u 1 src/**/*.html src/**/*.css out/src/",
     "copy-whatisnew-files": "copyfiles WHATISNEW.md out/resource",
-    "copy-test-files": "copyfiles -u 1 test/**/*.ps1 test/**/*.sh out/test/",
     "compile": "tsc -p ./ && npm run copy-files && npm run copy-whatisnew-files",
     "build": "rimraf out && webpack --mode development --config ./webpack.config.js && npm run compile",
     "build-failpoint": "rimraf out && npx ttsc -p ./",
