--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -892,7 +892,7 @@
     "watch": "webpack --watch --devtool nosources-source-map --info-verbosity verbose --config ./webpack.config.js",
     "package": "rimraf out && webpack --mode production --config ./webpack.config.js",
     "test-compile": "tsc -p ./",
-    "test-watch": "npm run copy-test-files && tsc -watch -p ./",
+    "test-watch": "tsc -watch -p ./",
     "pretest": "npm run lint && npm run check-format && npm run test-compile",
     "test:unit": "rimraf coverage && npm run compile && node out/test/unit/runTest.js && npm run test:unit:migration",
     "test:unit:migration": "nyc mocha --require ts-node/register \"test/unit/migration/*.test.ts\"",
